--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,4 @@
-email: 'zerostaticthemes@gmail.com'
-phone: 'XXXX XXX XXX'
-businessName: 'Hugo Serif'
-address: ''
+email: 'hubungi.pondasi@gmail.com'
+phone: ''
+businessName: 'Pondasi'
+address: 'Rumah Danang'
