--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,4 @@
-email: 'hubungi.pondasi@gmail.com'
-phone: ''
-businessName: 'Pondasi'
-address: 'Rumah Danang'
+email: 'info@pondasi.in'
+phone: '+6281290666605'
+businessName: 'Pondok Daring Siber'
+address: 'Jl. Ciledug Raya No.15, RT.4/RW.3, Petukangan Sel., Kec. Pesanggrahan, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12270'
