--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,4 +1,4 @@
 email: 'info@pondasi.in'
-phone: '+628-151-750-7509'
+phone: '+6 28-151-750-7509'
 businessName: 'Pondok Daring Siber'
 address: 'Jl. Ciledug Raya No.15, RT.4/RW.3, Petukangan Sel., Kec. Pesanggrahan, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12270'
