--- a/_data/social.yaml
+++ b/_data/social.yaml
@@ -1,5 +1,5 @@
 vimeo: ""
-twitter: "https://twitter.com/figuritltd"
-instagram: ""
-linkedin: "https://www.linkedin.com/in/linda-chesher-81a35618/"
+twitter: ""
+instagram: "https://instagram.com/pondasi.in"
+linkedin: "https://www.linkedin.com/company/pondokdaring/"
 facebook: ""
