--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ defaults:
 sass:
   style: compact # possible values: nested expanded compact compressed
 
-google_analytics_id: null
+google_analytics_id: G-1H9V3HSFC7
 
 plugins:
   - jekyll-environment-variables
